<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingRight="8dp"
    android:paddingLeft="8dp"
    android:paddingTop="8dp"
    android:layout_height="match_parent"
    tools:context=".View.MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
     android:layout_alignParentTop="true"
    android:orientation="vertical"
    >
    <LinearLayout
        android:weightSum="3"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/amount"
            android:layout_gravity="center_vertical"

            android:layout_weight="@dimen/weight_right"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <EditText
            android:inputType="numberDecimal"
            android:layout_weight="2"
            android:hint="@string/enter_currency_amount"
            android:id="@+id/amount_edt"
            android:textSize="14sp"
            android:layout_width="0dp"
            android:padding="8dp"
            android:background="@drawable/bg_edittext"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:weightSum="3"
        android:layout_marginBottom="8dp"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/currency"
            android:layout_weight="@dimen/weight_right"
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.AppCompatSpinner
            android:layout_weight="2"
            android:id="@+id/currencies_spn"
            android:spinnerMode="dialog"

            android:layout_width="0dp"
            android:background="@drawable/spinner_background"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:weightSum="3"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/provider"
            android:layout_weight="@dimen/weight_right"
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.AppCompatSpinner
            android:layout_weight="2"
           android:id="@+id/provider_spn"
            android:layout_width="0dp"
            android:spinnerMode="dialog"
            android:background="@drawable/spinner_background"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:textAllCaps="false"
        android:layout_height="wrap_content"
        android:id="@+id/convert_btn"
        android:text="@string/convert"/>
    <TextView
        android:id="@+id/convert1_txtview"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/convert2_txtview"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
    <ProgressBar
        android:id="@+id/progress_circular"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>